Fix click link header overlapping

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -119,13 +119,28 @@ main {
             position: sticky;
             top: 60px;
             width: 100%;
-            overflow: hidden;
+            // overflow: hidden;
             text-align: center;
             border-radius: 5px;
             background-color: #fffa;
         }
     
         p { width: 100%; }
+
+        #place-anchor {
+            position: absolute;
+            background-color: #000;
+            transform: translateY(-70px);
+            opacity: 0;
+        }
+
+        #about-anchor {
+            @extend #place-anchor;
+        }
+
+        #menu-anchor {
+            @extend #place-anchor;
+        }
     }
 
     .map-container{
